judgehost/judgings/b6d05355b062-0/endpoint-default/2/326/352/compile.out
Compiling failed with exitcode 1, compiler output:
t.cpp:3:20: error: expected ';' before 'int'
 using namespace std
                    ^
                    ;
t.cpp:5:1:
 int main(){
 ~~~                 
